# projectsafehouse

./: .gitignore  .gitmodules  Cargo.toml  LICENSE  README.md
glyphon/: Cargo.toml
glyphon/examples/: hello-world.rs
glyphon/src/: cache.rs
pong/: Cargo.toml  README.md  build.rs
pong/src/: ball.rs  main.rs  paddle.rs  pong.rs
safehouse-data/: Cargo.toml  README.md
safehouse-data/src/: lib.rs
safehouse-data/src/model/: obj.rs
safehouse-debug/: Cargo.toml
safehouse-debug/src/: lib.rs
safehouse-engine/: Cargo.toml
safehouse-engine/examples/hello-sceneobject/: main.rs
safehouse-engine/src/: camera.rs  context.rs  controller.rs  lib.rs  shader.rs  vertex_type.rs
safehouse-engine/src/entity/: mod.rs
safehouse-engine/src/model/: mod.rs  obj.rs
safehouse-engine/src/scene/: mod.rs  object.rs
safehouse-gpu/: Cargo.toml  README.md
safehouse-gpu/examples/hello-texture/: main.rs
safehouse-gpu/examples/hello-triangle/: main.rs
safehouse-gpu/examples/text-example/: main.rs
safehouse-gpu/src/: binding.rs  bindings.rs  buffer.rs  dataunit.rs  lib.rs  shader.rs  shaderprogram.rs  texture.rs  vertex.rs
safehouse-gpu/src/text/: mod.rs
safehouse-gpu/src/texture/: array.rs  mod.rs  sampler.rs  single.rs
safehouse-render/: Cargo.toml  README.md
safehouse-render/examples/hello-sceneobject/: main.rs
safehouse-render/examples/text-texture-example/: main.rs
safehouse-render/src/: binding.rs  camera.rs  controller.rs  lib.rs  manager.rs  resource.rs  shader.rs  utils.rs  vertex_type.rs
safehouse-render/src/bindgroups/: mod.rs
safehouse-render/src/bindgroups/global/: mod.rs
safehouse-render/src/entity/: mod.rs
safehouse-render/src/model/: d2.rs  mod.rs  obj.txt
safehouse-render/src/scene/: mod.rs  object.rs
safehouse-render/src/texture/: mod.rs
safehouse-render/src/texturetype/: mod.rs
safehouse-shader/: Cargo.toml
safehouse-shader/src/: lib.rs
safehouse-shared/: Cargo.toml
safehouse-shared/src/: lib.rs
safehouse-shared/src/vertex/: mod.rs  types.rs
slicebytes/: Cargo.toml
slicebytes/src/: lib.rs
staticmodel/: Cargo.toml
staticmodel/src/: lib.rs
walk-demo-engine/: Cargo.toml  README.md  build.rs
walk-demo-engine/examples/walk-demo/: main.rs
walk-demo-engine/src/: lib.rs
walk-demo-engine/src/entity/: bunny.rs  mod.rs  textpane.rs  textured.rs
walk-demo-engine/src/scene/: mod.rs  walking.rs
winit-app-handler/: Cargo.toml
winit-app-handler/src/: lib.rs
