[workspace]
resolver = "2"
members = ["safehouse-render", "safehouse-gpu", "slicebytes", "pong", "safehouse-data", "glyphon", "walk-demo-engine", "scenetest", "safehouse-shared", "run-through-walls"]
exclude = ["safehouse"]

[workspace.dependencies]
winit = "0.29"
wgpu = { version = "0.19" }
obj-rs = {git = "https://github.com/simnalamburt/obj-rs.git", branch = "main"}
safehouse-gpu ={ path = "safehouse-gpu" }
safehouse-render ={ path = "safehouse-render" }
safehouse-data ={ path = "safehouse-data" }
futures = "*"
image = {version = "0.25.1", features = ["jpeg","png"]}
slicebytes = { path = "./slicebytes" }
tagmap = { git = "http://github.com/toastmod/tagmap"}
glyphon = { path = "./glyphon" }
