[package]
name = "glyphon"
description = "Fast, simple 2D text rendering for wgpu"
version = "0.5.0"
edition = "2021"
homepage = "https://github.com/grovesNL/glyphon.git"
repository = "https://github.com/grovesNL/glyphon"
license = "MIT OR Apache-2.0 OR Zlib"

[dependencies]
wgpu = { workspace = true }
etagere = "0.2.10"
cosmic-text = "0.11"
lru = { version = "0.12.1", default-features = false }
rustc-hash = "1.1"

[dev-dependencies]
winit = { workspace = true, features = ["rwh_05"] }
wgpu = { workspace = true }
pollster = "0.3.0"