[package]
name = "pong"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
safehouse-render = {workspace = true}

[build-dependencies]
safehouse-render = {workspace = true}
safehouse-data = {workspace = true}
slicebytes = {workspace = true}

