[package]
name = "safehouse-data"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
obj-rs = {git = "https://github.com/simnalamburt/obj-rs.git", branch = "main"}
safehouse-render = {workspace = true}
slicebytes = {workspace = true}