[package]
name = "safehouse-gpu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = {workspace = true}
winit = {workspace = true}
futures = {workspace = true}
image = {workspace = true}
slicebytes = {workspace = true}

[dev-dependencies]
winit = { workspace = true }
safehouse-debug = { workspace = true }